<resources>
    <string name="app_name">Tracker Demo</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="make_the_search_easy">Make the searching easy</string>
    <string name="quick_registration">Quick registration</string>
	<string name="email">Email</string>
	<string name="password">Password </string>
	<string name="forgot_password">Forget password</string>
	<string name="login_loading">Loading,please wait</string>
    <string name="the_current_network_is_unavailable">The current network is unavailable!</string>
    <string name="login_server_failed">Login failed!</string>
    <string name="login_successful">Login successful!</string>
    <string name="username_or_password_is_empty">Empty sername or password !</string>
    <string name="password_error">Incorrect password!</string>
    <string name="login_exception">Login error!</string>
    <string name="user_information_is_incorrectly_filled">Incorrect user information !</string>
    <string name="requesting_server_now">Requesting server, please wait!</string>
    <string name="request_server_failed">Fail to request server!</string>
    <string name="register_successful">Register successful!</string>
    <string name="email_empty">Empty email!</string>
    <string name="the_password_is_empty">Empty password!</string>
    <string name="the_mailbox_has_been_registered">The mailbox has been registered!</string>
    <string name="abnormal_occurrence">Error!</string>
    <string name="user_information_is_incorrect">Incorrect user information!</string>
    <string name="mailbox_format_is_incorect">Incorrect mailbox format!</string>
    <string name="send_password_reset_connection">Send password to reset the connection</string>
    <string name="retrieve_password_mail_sent_successfully">Email that retrieving password is sent successfully!</string>
    <string name="send_mail_to_an_exception">Fail to send email!</string>
    <string name="the_user_is_not_registered_or_country_is_empty">Unregistered user or empty country!</string>
    <string name="abnormal_password_retrieval">Fail to retrieve password !</string>
<string name="the_value_you_entered_is_empty">Null value in your content!</string>
    <string name="modify_password">Modify password</string>
    <string name="old_password">Original password</string>
    <string name="new_password">New password</string>
    <string name="complete">Complete</string>
    <string name="password_successfully_modified">Password modified successfully！</string>
    <string name="incomplete_user_information">Incomplete user information!</string>
    <string name="abnormal_password_modify">Modify password error!</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="main_open">Open</string>
    <string name="main_quit">Press again to quit</string>
    <string name="main_bluetooth_open">Please turn on Bluetooth</string>
    <string name="turn_off_the_alarm">Please turn off the alarm</string>
    <string name="The_bop_lost_beyond_the_safe_distance">Device is out of safety range</string>
    <string name="call">Call</string>
    <string name="bluetooth">Bluetooth:</string>
    <string name="enabled">On</string>
    <string name="not_enabled">Off</string>
    <string name="map_mode">Map mode</string>
    <string name="camera_mode">Camera mode</string>
    <string name="activate_account">Activate account</string>
    <string name="cannot_activate_repeatedly">Cannot activate repeatedly!</string>
    <string name="not_missing">Missing unreported</string>
    <string name="relieve_missing">Relieved missing report</string>
    <string name="unbound">Unbound</string>
    <string name="relieve_bound">Remove binding</string>
    <string name="modify_name">Rename</string>
    <string name="after_removal_the_current_device_will_be_removed">The current devices will be deleted when relieves binding.</string>
    <string name="activation_mail_sent">Activating mail sent. </string>
    <string name="incomplete_information">Incomplete information</string>
    <string name="user_not_registered">User unregistered.</string>
    <string name="activation_mail_sent_an_exception">Activating mail failed.</string>
    <string name="bind_device_successfully">Bound successfully </string>
    <string name="user_not_logined_in">User is not logged in.</string>
    <string name="incomplete_device_information">Incomplete device information</string>
    <string name="user_does_not_exist">Invalid user</string>
    <string name="bind_user_exception">Binding user failed</string>
    <string name="user_not_activated">Nonactivated user</string>
    <string name="the_device_has_been_bound">The device has been bound!</string>
    <string name="device_unbound_successfully">Device unbound successfully.</string>
    <string name="mac_is_empty">mac is empty</string>
    <string name="device_not_bound">Device is not bound !</string>
    <string name="an_exception_occurred_on_device_unbound">Device unbound error !</string>
    <string name="head_updated_successfully">Device photo is uploaded </string>
<string name="modify_device_head_to_appear_abnormal">Device photo upload Error!</string>
    <string name="modify_device_name_successfully">Device renamed successfully! </string>
    <string name="modify_device_name_exception">Device rename error !</string>
    <string name="location_information_uploaded_successfully">Location uploaded successfully !</string>
    <string name="device_does_not_exist">Device not available !</string>
    <string name="abnormal_upload_of_position_information">Location upload error !</string>
    <string name="missing_successfully">Report missing success! </string>
    <string name="the_user_is_not_logged_in_or_not_activated">The user is not logged in or not activated !</string>
<string name="missing_exception">Report missing error! </string>
    <string name="the_device_is_not_bound">The device is not bound!</string>
    <string name="relieve_missing_successfully">relieve report missing success!</string>
    <string name="relieve_missing_exception">relieve report missing failed!</string>
    <string name="the_device_does_not_belong_to_you_can_not_relieve_missing">The device does not belong to you, you cannot relieve missing report! </string>
    <string name="query_all_devices_successfully"> search all the devices success!  </string>
    <string name="the_user_is_not_bound_to_any_device">The user is not bound to any device! </string>
    <string name="send_mail_stolen_equipment_successfully">Report missing device has sent email successfully! </string>
    <string name="json_string_is_empty">Json string is empty!</string>
    <string name="send_mail_reported_abnormal_equipment"> Email sent failed on Report missing device!</string>
    <string name="query_data_success">query data success !</string>
    <string name="user_information_incomplete">The user’s information is incomplete!</string>
    <string name="the_device_does_not_have_a_corresponding_record">No related record on the device!</string>
    <string name="query_exception">query failed!</string>
    <string name="rssi">Signal:</string>
    <string name="strong">Strong</string>
    <string name="middle">Middle</string>
    <string name="weak">Weak</string>
    <string name="dis">Distance:</string>
    <string name="near">Near</string>
    <string name="far">Far</string>
    <string name="status">status:</string>
    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected</string>
    <string name="connecting">Connecting</string>
    <string name="Battery">Battery:</string>
    <string name="last_lost_address">Lats Lost Location</string>
    <string name="connect_device">Connect Devices First</string>
    <string name="about">About</string>
    <string name="version">version:</string>
    <string name="rename">Rename</string>
    <string name="serial_number">Serial Number</string>
    <string name="device_list">Device List</string>
    <string name="searching">Searching</string>
    <string name="connected_five">5 Devices Can Be Connected</string>
    <string name="updata_name">Rename devices</string>
    <string name="saved_devices">Saved Device</string>
    <string name="search_list">Searching List</string>
    <string name="add_devices">Add Devices</string>
    <string name="no_device">No Device</string>
    <string name="delete_device">Delete Device</string>
    <string name="do_you_want_to_delete_the_device">Do you want to delete the device?</string>
    <string name="settings">Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="Alarm">Alarm When Disconnected</string>
    <string name="silent_area">Quite Zone</string>
    <string name="mobile_phone_set">Mobile Phone Settings</string>
    <string name="Sound">Sound</string>
    <string name="Vibration">Vibration</string>
    <string name="flash">Flashlight</string>
    <string name="alarm_distance">Anti Lost Range</string>
    <string name="map">Map</string>
    <string name="amap">Amap</string>
    <string name="google">Google Map</string>
    <string name="Ringtones">Ringtones</string>
    <string name="clear_record">Reset After record cleared</string>
    <string name="Restore_factory_settings">Reset All Settings</string>
    <string name="Whether_to_Restore_factory_settings">Reset All Settings or not?</string>
    <string name="After_login_out_all_connected_devices_are_disconnected">All connected devices will be off once logging out</string>
    <string name="login_out">Login Out</string>
    <string name="open">Open</string>
    <string name="close">Close </string>
    <string name="Photo_success">Photo Success</string>
    <string name="history_lost_record">Lost Location History</string>
     <string name="name">Name:</string>
     <string name="address">Address:</string>
     <string name="Longitude">Longitude:</string>
      <string name="latitude">Latitude:</string>
      <string name="Time">Time:</string>
      <string name="list_mode">List Mode</string>
      <string name="delete">Delete The Record Or Not？</string>
      <string name="Edit">Edit</string>
       <string name="dele">Delete</string>
</resources>