<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/bt_menu"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:background="@drawable/lanya" />

            <Button
                android:id="@+id/bt_settings"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/bt_menu"
                android:background="@drawable/setting" />
        </RelativeLayout>


    </LinearLayout>
 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical" 
       
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:orientation="horizontal" 
            
            >
            
            
            
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/status"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:text="@string/disconnect"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />
            </LinearLayout>

        
            
            
            
            
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/Battery"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />
				<ImageView 
				    android:id="@+id/iv_electricity"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
				    android:layout_gravity="center"
				    
				    />
            
            </LinearLayout>

            
        </LinearLayout>
		
       <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/top"
             /> 

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/dis"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_dis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:text="--"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />
            </LinearLayout>
            
            
            
            
                <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/rssi"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_rssi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="--"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        
        
        
         >
        
		
        <Button
            android:id="@+id/bt_tubiao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            
            android:background="@drawable/search"
            />
      
    </RelativeLayout>

</LinearLayout>